# finmmeval-task3-2026

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  benchmark.py  benchmark_singel.py  environment.yml  environment_old.yml  pyproject.toml  run_date_range.sh  run_download_ama_data.py  run_download_data.py  run_download_sp500_data.py
api/: __init__.py  decision_bridge.py  decision_bridge_worker.py  simple_trading_api.py
decision_making/: ama_data.py  data.py  feature_engineering.py  logger.py  models.py  news_classifier.py  news_pipeline.py  raw_strings.py  run_decision_making.py  signals.py  sp500_data.py  spark.py  technical.py  validation.py
decision_making/agents/: __init__.py  planner.py  portfolio_manager.py  registry.py
decision_making/agents/analysts/: __init__.py  company_news.py  company_news_enhanced.py  dummy.py  ml_model.py  section_news.py  technical.py
decision_making/analysis/: __init__.py  performance.py  queries.py
decision_making/config/: abelation_enhanced_company_news.yaml  abelation_ml.yaml  abelation_section_news.yaml  ablation_enhanced_company_news.yaml  ablation_enhanced_memory.yaml  ablation_enhanced_memory_longer.yaml  ablation_enhanced_tools.yaml  ablation_enhanced_tools_risk.yaml  ablation_ml.yaml  ablation_section_news.yaml  all_tools.yaml  api.yaml  cost_check.yaml  debug.yaml  debug_ml.yaml  debug_pm.yaml  dev.yaml  dev_cne.yaml  dev_gemini.yaml  dev_sectionnews.yaml  enhanced_tools.yaml  ensemble.yaml  planner.yaml  tesla_baseline.yaml  tesla_btc_baseline.yaml  tesla_btc_baseline_risk.yaml
decision_making/config/provider/: openai.yaml
decision_making/database/: deepfund.sqlite3  interface.py  sqlite_helper.py  sqlite_schema.dbml  sqlite_setup.py
decision_making/graph/: constants.py  schema.py  workflow.py
decision_making/llm/: cost_estimation.py  inference.py  prompt.py  provider.py
decision_making/memory/: __init__.py  manager.py  schema.py
decision_making/ml_model/: config.py  feature_engineering.py  feature_engineering_inference.py  ml_model_manager.py  model_persistence.py  models.py  online_learning.py  technical_indicators.py
decision_making/news/: classifier.py
decision_making/util/: config.py  db_helper.py  logger.py
docs/: deployment.md  ml_model.md  overview.md  section_news_analyst.md  test_API.md  worfklow.io  workflow.io
docs/archive/: README_ARCHIVE.md  endpoint_instructions.md
notebooks/: 20260301-dsgt_stocktron-performance-analysis.ipynb  20260426-mh-market-timing-performance.ipynb  20260427-mh-experiment-comparison.ipynb  20261111-mh-eda.ipynb
notebooks/eda/: 20260301-deepfund-performance-analysis.ipynb  20260426-mh-market-timing-performance.ipynb  20260427-mh-experiment-comparison.ipynb  20261111-mh-eda.ipynb
scripts/: backtest_section_news.py  compare_backtest.py  create_test_parquet.py  delete_config_history.sh  deploy_cloud_run.py  migrate_csv_to_parquet.py  run_date_range.sh  run_download_ama_data.py  run_download_sp500_data.py  smoke_api.sh  test_pipeline_quick.py  train_ml_model_simple.py  train_ml_model_tscv.py  train_return_model.py  train_return_model_simple.py  update_ml_model.py
tests/: conftest.py  test_ama_data.py  test_api.py  test_api_integration.py  test_llm_inference.py  test_logger.py  test_models.py
