[project]
name = "finmmeval-task3-2026"
version = "0.1.1"
authors = [
    { name = "Maximilian Heil", email = "mheil7@gatech.edu" },
    { name = "Boyang Gong", email = "bgong36@gatech.edu" },
    { name = "Aleksandar Pramov", email = "apramov3@gatech.edu" },
]
description = "DS@GT StockTron — multi-agent trading workflow plus a competition-facing HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pandas-market-calendars",
    "yfinance",
    "matplotlib",
    "scikit-learn",
    "pyyaml",
    "python-dotenv",
    "statsmodels",
    "gensim",
    "tqdm",
    "pyspark>=3.4.0",
    "pyarrow",
    "polars",
    "huggingface_hub",
    "torch",
    "tiktoken",
    "jupyterlab",
    "ruff",
    "pre-commit",
    "pytest",
    "pydantic",
    "fastapi",
    "uvicorn",
    "supabase",
    "langgraph",
    "typing-extensions",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-deepseek",
    "langchain-ollama",
    "langchain-fireworks",
]

[project.urls]
Homepage = "https://github.com/dsgt-arc/finmmeval-task3-2026"
Issues = "https://github.com/dsgt-arc/finmmeval-task3-2026/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["decision_making*"]
namespaces = false

# Ruff configuration
[tool.ruff]
# Enable preview features for latest ruff capabilities
preview = true
# Same as Black.
line-length = 130
indent-width = 4

# Target Python 3.11+
target-version = "py311"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Also enable flake8-bugbear (`B`), isort (`I`), and more
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B905",   # `zip()` without an explicit `strict=` parameter
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests` and `test_*.py` files
"tests/**/*.py" = ["ARG", "S"]
"test_*.py" = ["ARG", "S"]
# Ignore notebook-related issues
"*.ipynb" = ["E402", "I001"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in docstrings.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["decision_making"]
force-sort-within-sections = true

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests that run the real API bridge and workflow",
    "slow: tests that take longer and may hit external services",
]
